--- a/week01/01-RMarkdown.rmd
+++ b/week01/01-RMarkdown.rmd
@@ -1,3 +1,8 @@
+---
+output:
+  html_document: default
+  pdf_document: default
+---
 # Welcome to MY472 - Data for Data Scientists
 
 Before we start our first guided coding session, let's become a bit more familiar with RStudio Server (which we will use to interact with R) and RMarkdown.
